--- a/templates/posts/job-detail-after-login.html
+++ b/templates/posts/job-detail-after-login.html
@@ -67,7 +67,7 @@
                 {% endif %}
 
                 </div>
-              {% if not request.user.is_authenticated %}
+               {% if not request.user.is_authenticated %}
           <div class="col-md-6 padding-left-0 margin-top-20">
                   <blockquote>
                     <p> Click here to send your contact detail to user, to show your interest, user will soon contact you </p>
@@ -80,12 +80,11 @@
                 <div class="col-md-6 padding-left-0 margin-top-20">
                   <blockquote>
                     <p> Click here to send your contact detail to user, to show your interest, user will soon contact you </p>
-                      {% if tracker.interest_count == plan.plan.show_interest %}
 
-                    <a href="#" class="btn btn-primary"  data-rel="fancybox-button" >You have Reached Your Interest Limit</a>
-                      {% else %}
                           {% if interest == 'true' %}
                           <a class="btn btn-primary"  data-rel="fancybox-button">Already Shown Interest</a>
+                              {% elif  tracker.interest_count == plan.plan.show_interest %}
+                              <a href="#" class="btn btn-primary"  data-rel="fancybox-button" >You have Reached Your Interest Limit</a>
                               {% else %}
                               <a href="#" class="btn btn-primary"  data-rel="fancybox-button" onclick="showinterest(3000)">Show Interest</a>
                               {% endif %}
@@ -93,7 +92,6 @@
                   </blockquote>
                 </div>
               {% endif %}
-                  {% endif %}
               </div>
             </div>
           </div>
@@ -159,12 +157,11 @@
                 <div class="col-md-6 padding-left-0 margin-top-20">
                   <blockquote>
                     <p> Click here to send your contact detail to user, to show your interest, user will soon contact you </p>
-                      {% if tracker.interest_count == plan.plan.show_interest %}
 
-                    <a href="#" class="btn btn-primary"  data-rel="fancybox-button" >You have Reached Your Interest Limit</a>
-                      {% else %}
                           {% if interest == 'true' %}
                           <a class="btn btn-primary"  data-rel="fancybox-button">Already Shown Interest</a>
+                              {% elif  tracker.interest_count == plan.plan.show_interest %}
+                              <a href="#" class="btn btn-primary"  data-rel="fancybox-button" >You have Reached Your Interest Limit</a>
                               {% else %}
                               <a href="#" class="btn btn-primary"  data-rel="fancybox-button" onclick="showinterest(3000)">Show Interest</a>
                               {% endif %}
@@ -172,7 +169,6 @@
                   </blockquote>
                 </div>
               {% endif %}
-                  {% endif %}
           </div>
         </div>
         <!-- END INFO BLOCK -->
