--- a/templates/dashboard/plan-list.html
+++ b/templates/dashboard/plan-list.html
@@ -9,6 +9,7 @@
 				</li>
 				<li><a href="">Plans</a></li>
 			</ul>
+    <button class="btn btn-small btn-primary" onclick="location.href='{% url 'add-plan' %}'">Add New</button>
 
     <div class="row-fluid sortable">
 				<div class="box span12">
@@ -20,6 +21,7 @@
 							<a href="#" class="btn-close"><i class="halflings-icon remove"></i></a>
 						</div>
 					</div>
+
 					<div class="box-content">
 						<table class="table table-striped table-bordered bootstrap-datatable datatable">
 						  <thead>
@@ -40,11 +42,13 @@
                                     {% endif %}
 								</td>
 								<td class="center">
-
+                                    <a class="btn btn-success" href="#">
+										<i class="halflings-icon white zoom-in"></i>
+									</a>
 									<a class="btn btn-info" href="">
 										<i class="halflings-icon white edit"></i>
 									</a>
-									<a class="btn btn-danger" href="">
+									<a class="btn btn-danger" href="{% url 'delete-plan' plan.id %}">
 										<i class="halflings-icon white trash"></i>
 
 									</a>
