js files for tagging

--- a/templates/dashboard/user-subscriptions.html
+++ b/templates/dashboard/user-subscriptions.html
@@ -40,13 +40,10 @@
                                     <span class="label label-success">Active</span>
 								</td>
 								<td class="center">
-									<a class="btn btn-info" href="">
+									<a class="btn btn-info" href="{% url 'subscription-detail' user.id %}">
 										<i class="halflings-icon white edit"></i>
 									</a>
-									<a class="btn btn-danger" href="">
-										<i class="halflings-icon white trash"></i>
 
-									</a>
 								</td>
 							</tr>
 							{% endfor %}
