--- a/templates/dashboard/users.html
+++ b/templates/dashboard/users.html
@@ -45,16 +45,11 @@
                                     {% endif %}
 								</td>
 								<td class="center">
-									<a class="btn btn-success" href="">
-										<i class="halflings-icon white zoom-in"></i>
-									</a>
-									<a class="btn btn-info" href="">
+
+									<a class="btn btn-info" href="{% url 'user-details' user.id %}">
 										<i class="halflings-icon white edit"></i>
 									</a>
-									<a class="btn btn-danger" href="">
-										<i class="halflings-icon white trash"></i>
 
-									</a>
 								</td>
 							</tr>
 							{% endfor %}
