js files for tagging

--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -347,8 +347,8 @@
                         <li>
 							<a class="dropmenu" href="#"><i class="icon-folder-close-alt"></i><span class="hidden-tablet"> Posts</span><span class="label label-important"></span></a>
 							<ul>
-								<li><a class="submenu" href="submenu.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Category</span></a></li>
-								<li><a class="submenu" href="submenu2.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Technology Tags</span></a></li>
+								<li><a class="submenu" href="{% url 'category-list' %}"><i class="icon-file-alt"></i><span class="hidden-tablet"> Category</span></a></li>
+								<li><a class="submenu" href="{% url 'tags-list' %}"><i class="icon-file-alt"></i><span class="hidden-tablet"> Technology Tags</span></a></li>
 								<li><a class="submenu" href="submenu3.html"><i class="icon-file-alt"></i><span class="hidden-tablet"> Posts</span></a></li>
 							</ul>
 						</li>
