--- a/templates/posts/my-interest.html
+++ b/templates/posts/my-interest.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load endless %}
 {% block content %}
     <div class="main">
   <div class="container ">
@@ -17,6 +18,7 @@
 
 <div class="">
 {% if sell_posts %}
+    {% paginate 5 sell_posts %}
     {% for post in sell_posts %}
         <div class="search-result-item">
           <a href="{% url 'post-detail' post.slug %}?redirect=true"><h4>{{ post.title }}</h4>
@@ -37,13 +39,14 @@
 <div class="margin-top-10">                <div class="col-md-4 col-sm-4 items-info">Items 1 to 9 of 10 total</div>
                 <div class="col-md-8 col-sm-8">
                   <ul class="pagination pull-right">
-                    <li><a href="#">«</a></li>
-                    <li><span>1</span></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li><a href="#">»</a></li>
+                       <li>{% show_pages %}</li>
+{#                    <li><a href="#">«</a></li>#}
+{#                    <li><span>1</span></li>#}
+{#                    <li><a href="#">2</a></li>#}
+{#                    <li><a href="#">3</a></li>#}
+{#                    <li><a href="#">4</a></li>#}
+{#                    <li><a href="#">5</a></li>#}
+{#                    <li><a href="#">»</a></li>#}
                   </ul>
                 </div></div>
               </div>
@@ -55,6 +58,7 @@
 
 
        {% if buy_posts %}
+           {% paginate 5 buy_posts %}
     {% for post in buy_posts %}
         <div class="search-result-item">
           <a href="{% url 'post-detail' post.slug %}?redirect=true"><h4>{{ post.title }}</h4>
@@ -76,13 +80,14 @@
 <div class="margin-top-10">                <div class="col-md-4 col-sm-4 items-info">Items 1 to 9 of 10 total</div>
                 <div class="col-md-8 col-sm-8">
                   <ul class="pagination pull-right">
-                    <li><a href="#">«</a></li>
-                    <li><span>1</span></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li><a href="#">»</a></li>
+                       <li>{% show_pages %}</li>
+{#                    <li><a href="#">«</a></li>#}
+{#                    <li><span>1</span></li>#}
+{#                    <li><a href="#">2</a></li>#}
+{#                    <li><a href="#">3</a></li>#}
+{#                    <li><a href="#">4</a></li>#}
+{#                    <li><a href="#">5</a></li>#}
+{#                    <li><a href="#">»</a></li>#}
                   </ul>
                 </div></div>
               </div>
