js files for tagging

--- a/templates/posts/category-posts.html
+++ b/templates/posts/category-posts.html
@@ -1,6 +1,6 @@
 
 {% extends 'base.html' %}
-{% load category_list %}
+{% load category_list endless %}
 {% block content %}
 <!-- Header END -->
 {% list_category as categories %}
