--- a/templates/dashboard/tech-tags-list.html
+++ b/templates/dashboard/tech-tags-list.html
@@ -27,6 +27,7 @@
 						  <thead>
 							  <tr>
 								  <th>Tag Name</th>
+                                  <th>Actions</th>
 							  </tr>
 						  </thead>
 						  <tbody>
