--- a/templates/dashboard/plan-list.html
+++ b/templates/dashboard/plan-list.html
@@ -45,7 +45,7 @@
                                     <a class="btn btn-success" href="#">
 										<i class="halflings-icon white zoom-in"></i>
 									</a>
-									<a class="btn btn-info" href="">
+									<a class="btn btn-info" href="{% url 'edit-plan' plan.id %}">
 										<i class="halflings-icon white edit"></i>
 									</a>
 									<a class="btn btn-danger" href="{% url 'delete-plan' plan.id %}">
