--- a/templates/dashboard/tech-tags-list.html
+++ b/templates/dashboard/tech-tags-list.html
@@ -37,7 +37,7 @@
 
 								<td class="center">
 
-									<a class="btn btn-info" href="">
+									<a class="btn btn-info" href="{% url 'edit-tags'  tags.id %}">
 										<i class="halflings-icon white edit"></i>
 									</a>
 									<a class="btn btn-danger" href="{% url 'delete-tags' tags.id %}">
