--- a/templates/dashboard/category-list.html
+++ b/templates/dashboard/category-list.html
@@ -36,7 +36,7 @@
 
 								<td class="center">
 
-									<a class="btn btn-info" href="{% url 'edit-plan' category.id %}">
+									<a class="btn btn-info" href="{% url 'edit-category' category.id %}">
 										<i class="halflings-icon white edit"></i>
 									</a>
 									<a class="btn btn-danger" href="{% url 'delete-view' category.id %}">
