js files for tagging

--- a/templates/accounts/thank-you.html
+++ b/templates/accounts/thank-you.html
@@ -20,8 +20,9 @@
                        <p>
                      Your Registration was Successful
 We will contact You Shortly and verify Please Select Your Payment Option<br>
-                     <a href="../payment-process-debit-credit-card.html" class="btn btn-success margin-top-35 " style="color:#FFF;"><i class="fa fa-credit-card"></i> Credit / Debit Card</a>
-                                          <a href="../payment-process-paypal.html" class="btn btn-primary margin-top-35"><i class="fa fa-paypal"></i> Paypal</a>
+                     <a href="{% url 'card-pay' %}" class="btn btn-success margin-top-35 " style="color:#FFF;"><i class="fa fa-credit-card"></i> Credit / Debit Card</a>
+{#                                          <a href="../payment-process-paypal.html" class="btn btn-primary margin-top-35"><i class="fa fa-paypal"></i> Paypal</a>#}
+                       {{ form.render }}
                   </p>
                    {% endif %}
                </div>
