--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
           <li {% ifequal request.path '/accounts/update-profile/' %}class="active"{% endifequal %}><a  href="{% url 'update-profile' %}">My Account</a></li>
 
       {% endif %}
-        <li {% ifequal request.path '/accounts/about/' %}class="active"{% endifequal %}><a href="{% url 'about' %}">About Us</a></li>
+        <li {% ifequal request.path '/accounts/aboutus/' %}class="active"{% endifequal %}><a href="{% url 'aboutus' %}">About Us</a></li>
         <li {% ifequal request.path '/accounts/contact/' %}class="active"{% endifequal %}><a href="{% url 'contact' %}">Contact Us</a></li>
           {% if not request.user.is_authenticated %}
         <li {% ifequal request.path '/accounts/register/' %}class="active"{% endifequal %}><a href="{% url 'register' %}">Sign Up</a></li>
