--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -44,18 +44,18 @@
                   <p>Lorem ipsum dolor sit demo contentLorem ipsum dolor sit demo contentLorem ipsum dolor sit demo contentLorem ipsum dolor sit demo contentLorem ipsum dolor sit demo contentLorem ipsum dolor sit demo contentLorem ipsum dolor sit demo content.</p>
 
                   <!-- BEGIN FORM-->
-                  <form action="#" role="form">
+                  <form action="." role="form" method="post">{% csrf_token %}
                     <div class="form-group">
                       <label for="contacts-name">Name</label>
-                      <input class="form-control" id="contacts-name" type="text">
+                      <input class="form-control" id="contacts-name" type="text" name="name">
                     </div>
                     <div class="form-group">
                       <label for="contacts-email">Email</label>
-                      <input class="form-control" id="contacts-email" type="email">
+                      <input class="form-control" id="contacts-email" type="email" name="email">
                     </div>
                     <div class="form-group">
                       <label for="contacts-message">Message</label>
-                      <textarea class="form-control" rows="5" id="contacts-message"></textarea>
+                      <textarea class="form-control" rows="5" id="contacts-message" name="message"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary"><i class="icon-ok"></i> Send</button>
                     <button type="button" class="btn btn-default">Cancel</button>
