--- a/templates/posts/job-detail-after-login.html
+++ b/templates/posts/job-detail-after-login.html
@@ -56,7 +56,7 @@
                         {% if not request.user.is_authenticated %}
                             <a href="{% url 'login' %}" class="btn btn-primary">Get Contact Detail</a>
                             {% else %}
-                {% if tracker.view_count == plan.plan.view_contact %}
+                {% if tracker.view_count == plan.view_contact %}
                           <a href="" class="btn btn-primary">You Have Reached Your View Limit</a>
                       {% else %}
                     <a onclick="getcontact(3000)" class="btn btn-primary">Get Contact Detail</a>
@@ -83,7 +83,7 @@
 
                           {% if interest == 'true' %}
                           <a class="btn btn-primary"  data-rel="fancybox-button">Already Shown Interest</a>
-                              {% elif  tracker.interest_count == plan.plan.show_interest %}
+                              {% elif  tracker.interest_count == plan.show_interest %}
                               <a href="#" class="btn btn-primary"  data-rel="fancybox-button" >You have Reached Your Interest Limit</a>
                               {% else %}
                               <a href="#" class="btn btn-primary"  data-rel="fancybox-button" onclick="showinterest(3000)">Show Interest</a>
@@ -135,7 +135,7 @@
                {% if not request.user.is_authenticated %}
                             <a href="{% url 'login' %}" class="btn btn-primary">Get Contact Detail</a>
                             {% else %}
-                {% if tracker.view_count == plan.plan.view_contact %}
+                {% if tracker.view_count == plan.view_contact %}
                           <a href="" class="btn btn-primary">You Have Reached Your View Limit</a>
                       {% else %}
                     <a class="btn btn-primary" onclick="getcontact(3000)">Get Contact Detail</a>
@@ -161,7 +161,7 @@
 
                           {% if interest == 'true' %}
                           <a class="btn btn-primary"  data-rel="fancybox-button">Already Shown Interest</a>
-                              {% elif  tracker.interest_count == plan.plan.show_interest %}
+                              {% elif  tracker.interest_count == plan.show_interest %}
                               <a href="#" class="btn btn-primary"  data-rel="fancybox-button" >You have Reached Your Interest Limit</a>
                               {% else %}
                               <a href="#" class="btn btn-primary"  data-rel="fancybox-button" onclick="showinterest(3000)">Show Interest</a>
