--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -352,7 +352,7 @@
 								<li><a class="submenu" href="{% url 'post-list' %}"><i class="icon-file-alt"></i><span class="hidden-tablet"> Posts</span></a></li>
 							</ul>
 						</li>
-
+                        <li><a href="{% url 'paypal-lists' %}"><i class="icon-bar-chart"></i><span class="hidden-tablet"> Paypal Payments</span></a></li>
 					</ul>
 				</div>
 			</div>
