templates for about page, plans

--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -353,6 +353,7 @@
 							</ul>
 						</li>
                         <li><a href="{% url 'paypal-lists' %}"><i class="icon-bar-chart"></i><span class="hidden-tablet"> Paypal Payments</span></a></li>
+                        <li><a href="{% url 'about-us' %}"><i class="icon-bar-chart"></i><span class="hidden-tablet"> About Us</span></a></li>
 					</ul>
 				</div>
 			</div>
