table for handling signin, signup, aboutus contents

--- a/templates/dashboard/aboutus.html
+++ b/templates/dashboard/aboutus.html
@@ -1,9 +1,9 @@
 {% extends 'admin_base.html' %}
 {% block admin_content %}
-    <div class="container-fluid-full">
 
-			<!-- end: Main Menu -->
-			<div id="content" class="span10">
+
+
+    <div id="content" class="span10">
 
 
 			<ul class="breadcrumb">
@@ -21,7 +21,7 @@
 			<div class="row-fluid sortable">
 				<div class="box span12">
 					<div class="box-header" data-original-title>
-						<h2><i class="halflings-icon edit"></i><span class="break"></span>About Us</h2>
+						<h2><i class="halflings-icon edit"></i><span class="break"></span>Form Elements</h2>
 						<div class="box-icon">
 							<a href="#" class="btn-setting"><i class="halflings-icon wrench"></i></a>
 							<a href="#" class="btn-minimize"><i class="halflings-icon chevron-up"></i></a>
@@ -69,14 +69,44 @@
 
 			</div><!--/row-->
 
-
-
-
-
-
 	</div><!--/.fluid-container-->
 
-			<!-- end: Content -->
-		</div><!--/#content.span10-->
-		</div>
+
+{#    <div class="container-fluid-full">#}
+{##}
+{#			<!-- end: Main Menu -->#}
+{#			<div id="content" class="span10">#}
+{##}
+{##}
+{#			<ul class="breadcrumb">#}
+{#				<li>#}
+{#					<i class="icon-home"></i>#}
+{#					<a href="/dashboard/">Home</a>#}
+{#					<i class="icon-angle-right"></i>#}
+{#				</li>#}
+{#				<li>#}
+{#					<i class="icon-edit"></i>#}
+{#					<a href="">Aboutus</a>#}
+{#				</li>#}
+{#			</ul>#}
+{##}
+{#			<div class="row-fluid sortable">#}
+{#				<div class="box span12">#}
+{#					<div class="box-header" data-original-title>#}
+{#						<h2><i class="halflings-icon edit"></i><span class="break"></span>About Us</h2>#}
+{#						<div class="box-icon">#}
+{#							<a href="#" class="btn-setting"><i class="halflings-icon wrench"></i></a>#}
+{#							<a href="#" class="btn-minimize"><i class="halflings-icon chevron-up"></i></a>#}
+{#							<a href="#" class="btn-close"><i class="halflings-icon remove"></i></a>#}
+{#						</div>#}
+{#					</div>#}
+
+{#				</div><!--/span-->#}
+{##}
+{#			</div><!--/row-->#}
+{#	</div><!--/.fluid-container-->#}
+{##}
+{#			<!-- end: Content -->#}
+{#		</div><!--/#content.span10-->#}
+{#		</div>#}
 {% endblock %}
