--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -354,6 +354,8 @@
 						</li>
                         <li><a href="{% url 'paypal-lists' %}"><i class="icon-bar-chart"></i><span class="hidden-tablet"> Paypal Payments</span></a></li>
                         <li><a href="{% url 'about-us' %}"><i class="icon-bar-chart"></i><span class="hidden-tablet"> About Us</span></a></li>
+                        <li><a href="{% url 'team-lists' %}"><i class="icon-bar-chart"></i><span class="hidden-tablet"> Team Details</span></a></li>
+                        <li><a href="{% url 'web-content' %}"><i class="icon-bar-chart"></i><span class="hidden-tablet"> WebSite Contents</span></a></li>
 					</ul>
 				</div>
 			</div>
