added new templates in dashboard for contact,web contents etc

--- a/templates/dashboard/users.html
+++ b/templates/dashboard/users.html
@@ -40,7 +40,7 @@
 								<td class="center">
                                     {% if user.user.is_active == True%}
                                     <a href="{% url 'deactivate-user' user.user.id %}" >
-                                        <span class="label label-success" href="{% url 'deactivate-user' user.user.id %}">Active</span>
+                                        <span class="label label-success" data-toggle="modal" data-target="#myModal">Active</span>
                                     </a>
                                     {% else %}
 									<a href="{% url 'deactivate-user' user.user.id %}" ><span class="label label-warning">Deactivated</span></a>
@@ -62,4 +62,5 @@
 
 			</div><!--/row-->
     </div>
+
 {% endblock %}
