--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -21,7 +21,8 @@
 	<link id="base-style-responsive" href="/static/bootstrap/css/style-responsive.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&subset=latin,cyrillic-ext,latin-ext' rel='stylesheet' type='text/css'>
 	<!-- end: CSS -->
-
+{% block admin_css %}
+{% endblock %}
 
 	<!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -356,6 +357,7 @@
                         <li><a href="{% url 'about-us' %}"><i class="icon-bar-chart"></i><span class="hidden-tablet"> About Us</span></a></li>
                         <li><a href="{% url 'team-lists' %}"><i class="icon-bar-chart"></i><span class="hidden-tablet"> Team Details</span></a></li>
                         <li><a href="{% url 'web-content' %}"><i class="icon-bar-chart"></i><span class="hidden-tablet"> WebSite Contents</span></a></li>
+                        <li><a href="{% url 'contact' %}"><i class="icon-bar-chart"></i><span class="hidden-tablet"> Contact Us</span></a></li>
 					</ul>
 				</div>
 			</div>
@@ -457,6 +459,8 @@
 		<script src="/static/bootstrap/js/retina.js"></script>
 
 		<script src="/static/bootstrap/js/custom.js"></script>
+        {% block admin_script %}
+        {% endblock %}
 	<!-- end: JavaScript-->
 
 </body>
