fixed url conflict in login and contact form

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -10,7 +10,7 @@
               <legend>Sign In<br>
               <br>
               </legend>
-<p>Put Message Lorem ipsum dolor site demo content Lorem ipsum dolor site demo content Lorem ipsum dolor site demo content Lorem ipsum dolor site demo content<br>
+<p>{{ content.signin|linebreaks }}<br>
 <br>
 </p>               {% if messages %}
                     {% for message in messages %}
