--- a/templates/accounts/sign-up.html
+++ b/templates/accounts/sign-up.html
@@ -84,9 +84,7 @@
             <div class="col-md-4 col-sm-4 pull-right">
               <div class="form-info"> <br>
                 <h2><em>Important</em> Information</h2>
-                <p>Lorem ipsum dolor ut sit ame dolore Lorem ipsum dolor ut sit ame dolore Lorem ipsum dolor ut sit ame dolore Lorem ipsum dolor ut sit ame dolore Lorem ipsum dolor ut sit ame dolore Lorem ipsum dolor ut sit ame dolore Lorem ipsum dolor ut sit ame dolore </p>
-                <p>Lorem ipsum dolor ut sit ame dolore Lorem ipsum dolor ut sit ame dolore Lorem ipsum dolor ut sit ame dolore Lorem ipsum dolor ut sit ame dolore Lorem ipsum dolor ut sit ame dolore</p>
-                <p>Lorem ipsum dolor ut sit ame dolore Lorem ipsum dolor ut sit ame dolore Lorem ipsum dolor ut sit ame dolore </p>
+                <p>{{ content.signup|linebreaks }}</p>
                 <button type="button" class="btn btn-default">More details</button>
               </div>
             </div>
