template side changes for creating csv files

--- a/templates/dashboard/adminindex.html
+++ b/templates/dashboard/adminindex.html
@@ -605,34 +605,20 @@
 
 			<div class="row-fluid">
 
-				<a class="quick-button metro yellow span2">
-					<i class="icon-group"></i>
-					<p>Users</p>
-					<span class="badge">237</span>
-				</a>
-				<a class="quick-button metro red span2">
+
+				<a class="quick-button metro red span2" href="{% url 'generate-report' %}?type=daily">
 					<i class="icon-comments-alt"></i>
-					<p>Comments</p>
-					<span class="badge">46</span>
+					<p>Daily Report</p>
+					<span class="badge"></span>
 				</a>
-				<a class="quick-button metro blue span2">
+				<a class="quick-button metro blue span2" href="{% url 'generate-report' %}?type=monthly">
 					<i class="icon-shopping-cart"></i>
-					<p>Orders</p>
-					<span class="badge">13</span>
+					<p>Monthly Report</p>
+					<span class="badge"></span>
 				</a>
-				<a class="quick-button metro green span2">
-					<i class="icon-barcode"></i>
-					<p>Products</p>
-				</a>
-				<a class="quick-button metro pink span2">
-					<i class="icon-envelope"></i>
-					<p>Messages</p>
-					<span class="badge">88</span>
-				</a>
-				<a class="quick-button metro black span2">
-					<i class="icon-calendar"></i>
-					<p>Calendar</p>
-				</a>
+
+
+
 
 				<div class="clearfix"></div>
 
