--- a/templates/dashboard/adminindex.html
+++ b/templates/dashboard/adminindex.html
@@ -237,22 +237,21 @@
             type: 'spline'
         },
         title: {
-            text: 'Monthly Average Temperature'
+            text: 'Monthly Payment Report'
         },
         subtitle: {
-            text: 'Source: WorldClimate.com'
+            text: 'Source: sourcecodepoint.com'
         },
         xAxis: {
-            categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',
-                'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+            categories: {{ category_lists|safe }}
         },
         yAxis: {
             title: {
-                text: 'Temperature'
+                text: 'Days'
             },
             labels: {
                 formatter: function () {
-                    return this.value + '°';
+                    return this.value ;
                 }
             }
         },
@@ -270,28 +269,24 @@
             }
         },
         series: [{
-            name: 'Tokyo',
+            name: 'Paypal',
             marker: {
                 symbol: 'square'
             },
-            data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, {
-                y: 26.5,
-                marker: {
-                    symbol: 'url(http://www.highcharts.com/demo/gfx/sun.png)'
-                }
-            }, 23.3, 18.3, 13.9, 9.6]
+            data: {{ paypal_lists|safe }}
+                    //[7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, {
+                //y: 26.5
+                //marker: {
+                //    symbol: 'url(http://www.highcharts.com/demo/gfx/sun.png)'
+                //}
+            //}, 23.3, 18.3, 13.9, 9.6]6
 
         }, {
-            name: 'London',
+            name: 'CreditCard',
             marker: {
                 symbol: 'diamond'
             },
-            data: [{
-                y: 3.9,
-                marker: {
-                    symbol: 'url(http://www.highcharts.com/demo/gfx/snow.png)'
-                }
-            }, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
+            data: {{ credit_list|safe }}
         }]
     });
 });
